src/app/modules/products-searcher/components/products-searcher/products-searcher.component.scss
.mt {
    padding: 35px;
}

.container {
    max-width: 1200px;
    margin: auto;
}

.grid {
    display: grid;
    grid-template-columns: 400px 60vw 1fr;

    .left {
        >* {
            position: sticky;
            top: 70px;
        }
    }

    .up {
        margin-bottom: 40px;
    }

    .products {
        >* {
            margin: 20px 0;
        }
    }
}

@media (max-width: 1020px) {
    .grid {
        grid-template-columns: 100%;
        grid-template-rows: auto 1fr 1fr;

        ::ng-deep .left>app-other-filters {
            form {
                padding: 0 10%;
            }
        }

        .center .up {
            .search {
                padding: 0 6%;
            }
        }
    }
}

